--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
+</head>
 <body>
-
     <h1>Contact</h1>
     
     <p>
@@ -8,11 +8,19 @@
         Syracuse University<br>
         Huntington Hall 030<br>
         Syracuse, NY 13244<br>
-        Email: <a href="cabiniar@syr.edu">your-email@syr.edu</a>
+        Email: <a href="mailto:your-email@syr.edu">your-email@syr.edu</a>
     </p>
 
     <p>
-        <a href="https://www.linkedin.com/in/christopher-biniaris-9810bb20a" target="_blank">My LinkedIn Profile</a>
+        <a href="https://www.linkedin.com/in/christopher-biniaris-9810bb20a" target="_blank">
+            My LinkedIn Profile
+        </a>
+    </p>
+
+    <p>
+        <a href="https://www.linkedin.com/in/christopher-biniaris-9810bb20a" target="_blank">
+            <img src="images/linkedin-logo.png" alt="LinkedIn Logo" style="width:50px;height:50px;">
+        </a>
     </p>
 
 </body>
