--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -8,7 +8,7 @@
         Syracuse University<br>
         Huntington Hall 030<br>
         Syracuse, NY 13244<br>
-        Email: <a href="mailto:your-email@syr.edu">your-email@syr.edu</a>
+        Email: <a href="cabiniar@syr.edu">cabiniar@syr.edu</a>
     </p>
 
     <p>
