--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -19,7 +19,7 @@
 
     <p>
         <a href="https://www.linkedin.com/in/christopher-biniaris-9810bb20a" target="_blank">
-            <img src="images/linkedin-logo.png" alt="LinkedIn Logo" style="width:50px;height:50px;">
+            <img src="images/linkedin-logo.png" alt="LinkedIn Logo">
         </a>
     </p>
 
