--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -15,7 +15,7 @@
         Syracuse University<br>
         Huntington Hall 030<br>
         Syracuse, NY 13244<br>
-        Email: <a href="mailto:your-email@syr.edu">your-email@syr.edu</a>
+        Email: <a href="cabiniar@syr.edu">cabiniar@syr.edu</a>
     </p>
 
 
@@ -26,13 +26,12 @@
     
     <p>
         <a href="https://www.linkedin.com/in/christopher-biniaris-9810bb20a" target="_blank">
-            <img src="../pictures/linkedin-logo.png" alt="LinkedIn Logo" style="width:50px;height:50px;" />
+            <img src="../pictures/linkedin-logo.png" alt="LinkedIn Logo"/>
         </a>
     </p>
 
    
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.004244579453!2d-76.13794742422093!3d43.041342191789205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a1d241e43d%3A0xd51d775683ab3f9b!2sHuntington%20Hall%2C%20350%20Huntington%20hall%2C%20Syracuse%2C%20NY%2013244!5e0!3m2!1sen!2sus!4v1726091918147!5m2!1sen!2sus" 
-    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </body>
 </html>
