--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills</title>
+    <title>My Interests and Skills</title>
     <style>
         table, th, td {
             border: 1px solid black;
@@ -11,6 +11,7 @@
         }
         th, td {
             padding: 10px;
+            text-align: center;
         }
         caption {
             caption-side: top;
@@ -20,23 +21,66 @@
     </style>
 </head>
 <body>
+
+    <!-- Table with Interests and Skills -->
     <table>
-        <caption>Technical Skills</caption>
+        <caption>My Interests and Skills</caption>
         <tr>
-            <th>Skill</th>
-            <th>Competency Level</th>
-            <th>Years of Experience</th>
+            <th>Interest</th>
+            <th>Skill Related to Interest</th>
+            <th>Proficiency Level</th>
         </tr>
         <tr>
-            <td>HTML</td>
+            <td>Basketball</td>
+            <td>Shooting Accuracy</td>
             <td>Advanced</td>
-            <td>3</td>
         </tr>
         <tr>
-            <td>CSS</td>
+            <td>Video Games</td>
+            <td>Strategy Development</td>
             <td>Intermediate</td>
-            <td>2</td>
+        </tr>
+        <tr>
+            <td>Coding</td>
+            <td>Problem Solving</td>
+            <td>Advanced</td>
+        </tr>
+        <tr>
+            <td>Music</td>
+            <td>Guitar Playing</td>
+            <td>Beginner</td>
+        </tr>
+        <tr>
+            <td>Photography</td>
+            <td>Photo Editing</td>
+            <td>Intermediate</td>
+        </tr>
+        <tr>
+            <td>Fitness</td>
+            <td>Weight Lifting</td>
+            <td>Advanced</td>
+        </tr>
+        <tr>
+            <td>Reading</td>
+            <td>Critical Thinking</td>
+            <td>Advanced</td>
+        </tr>
+        <tr>
+            <td>Cooking</td>
+            <td>Recipe Development</td>
+            <td>Intermediate</td>
+        </tr>
+        <tr>
+            <td>Traveling</td>
+            <td>Itinerary Planning</td>
+            <td>Advanced</td>
+        </tr>
+        <tr>
+            <td>Social Media</td>
+            <td>Content Creation</td>
+            <td>Advanced</td>
         </tr>
     </table>
+
 </body>
 </html>
