--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -7,57 +7,47 @@
     <style>
         table, th, td {
             border: 1px solid black;
-            border-collapse: collapse;
         }
-        th, td {
-            padding: 10px;
-            text-align: center;
-        }
-        caption {
-            caption-side: top;
-            font-size: 20px;
-            font-weight: bold;
-        }
+        
     </style>
 </head>
 <body>
 
-    <!-- Table with Interests and Skills -->
     <table>
         <caption>My Interests and Skills</caption>
         <tr>
             <th>Interest</th>
-            <th>Skill Related to Interest</th>
-            <th>Proficiency Level</th>
+            <th>Skill</th>
+            <th>How good am I</th>
         </tr>
         <tr>
             <td>Basketball</td>
-            <td>Shooting Accuracy</td>
+            <td>Shooting</td>
             <td>Advanced</td>
         </tr>
         <tr>
             <td>Video Games</td>
-            <td>Strategy Development</td>
+            <td>Strategy</td>
             <td>Intermediate</td>
         </tr>
         <tr>
             <td>Coding</td>
-            <td>Problem Solving</td>
+            <td> Solving</td>
             <td>Advanced</td>
         </tr>
         <tr>
             <td>Music</td>
-            <td>Guitar Playing</td>
+            <td>Guitar</td>
             <td>Beginner</td>
         </tr>
         <tr>
             <td>Photography</td>
-            <td>Photo Editing</td>
+            <td>Editing</td>
             <td>Intermediate</td>
         </tr>
         <tr>
             <td>Fitness</td>
-            <td>Weight Lifting</td>
+            <td>Lifting</td>
             <td>Advanced</td>
         </tr>
         <tr>
@@ -72,12 +62,12 @@
         </tr>
         <tr>
             <td>Traveling</td>
-            <td>Itinerary Planning</td>
+            <td>Planning</td>
             <td>Advanced</td>
         </tr>
         <tr>
             <td>Social Media</td>
-            <td>Content Creation</td>
+            <td>Creation</td>
             <td>Advanced</td>
         </tr>
     </table>
