--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -14,7 +14,7 @@
     <p>
         Christopher Biniaris<br>
         Syracuse University<br>
-        Huntington Hall 030<br>
+        Huntington hall 030<br>
         Syracuse, NY 13244<br>
         Email: <a href="mailto:cabiniar@syr.edu">cabiniar@syr.edu</a>
     </p>
