--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -38,7 +38,7 @@
     
     <form action="https://formspree.io/f/xrbzwgqp" method="POST">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
+        <input type="taext" id="name" name="name"><br><br>
 
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
