--- a/lab07/index.html
+++ b/lab07/index.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>263 Modern Art - Home</title>
+    <title>Christopher Biniaris - Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <nav>
-        <a href="index.html">Home</a> | 
-        <a href="skills.html">Skills</a> | 
+        <a href="index.html">Home</a> |
+        <a href="skills.html">Skills</a> |
         <a href="contact.html">Contact</a>
     </nav>
 
     <header>
-        <h1>Welcome to 263 Modern Art Gallery</h1>
+        <h1>Christopher Biniaris</h1>
     </header>
 
     <main>
-        <p>Welcome to our modern art gallery, where you can explore various collections, exhibitions, and learn about our featured artists. We strive to make art accessible to everyone, showcasing both upcoming and established talents in the art community.</p>
+        <p>Hello! My name is Christopher Biniaris. I am currently a senior studying Cybersecurity at Syracuse University. I have a passion for technology, information security, and the intersection of communications with tech. I also enjoy working on creative projects like designing posters and managing social media.</p>
+        <p>Outside of school, I have experience interning with Bank of America, and I’m also involved in various clubs and activities such as Women in Communications and Sigma Chi.</p>
     </main>
-
 </body>
 </html>
