--- a/lab08/floats.html
+++ b/lab08/floats.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 08 - Containers and Floats</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav>
         <a href="index.html">Home</a> |
@@ -22,18 +24,19 @@
         <div class="container">
             <div class="float-left">
                 <img src="https://via.placeholder.com/150" alt="Placeholder Image" class="float-image">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat lacus eget nisl scelerisque, ac varius ligula ultricies.</p>
+                <p>Welcome to Lab 08, where we will explore the concept of CSS floats. This text is next to an image that has been floated to the left, demonstrating how text can wrap around a floated element.</p>
             </div>
+
             <div class="float-right">
-                <p>Nam accumsan euismod dolor, a facilisis nunc ultricies nec. Suspendisse ut aliquet nisi. Aenean at magna at eros ultricies aliquet.</p>
+                <p>Floats are a powerful CSS tool for creating dynamic and engaging layouts. You can use them to align images and text side by side. Floats were widely used before the introduction of modern layout techniques such as flexbox and grid.</p>
             </div>
         </div>
 
         <div class="clearfix"></div>
-        
+
         <section>
             <h2>More About Floats</h2>
-            <p>Floats are a CSS positioning property used to create interesting layouts by allowing content to flow around floated elements. This experiment will help you understand how to utilize CSS floats effectively.</p>
+            <p>CSS floats are commonly used to wrap text around images. Understanding how to use floats properly helps in creating visually appealing web pages, even with newer technologies available today.</p>
         </section>
     </main>
 
@@ -41,4 +44,5 @@
         <p>&copy; 2024 Christopher Biniaris</p>
     </footer>
 </body>
+
 </html>
