--- a/lab08/floats.html
+++ b/lab08/floats.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 08 - Containers and Floats</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <nav>
         <a href="index.html">Home</a> |
@@ -20,16 +18,14 @@
         <h1>Exploring CSS Floats</h1>
     </header>
 
-    <main>
-        <div class="container">
-            <div class="float-left">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image" class="float-image">
-                <p>Welcome to Lab 08, where we will explore the concept of CSS floats. This text is next to an image that has been floated to the left, demonstrating how text can wrap around a floated element.</p>
-            </div>
-
-            <div class="float-right">
-                <p>Floats are a powerful CSS tool for creating dynamic and engaging layouts. You can use them to align images and text side by side. Floats were widely used before the introduction of modern layout techniques such as flexbox and grid.</p>
-            </div>
+    <main class="container">
+        <div class="float-left">
+            <img src="https://via.placeholder.com/150" alt="Placeholder Image" class="float-image">
+            <p>Welcome to Lab 08, where we will explore the concept of CSS floats. This text is next to an image that has been floated to the left, demonstrating how text can wrap around a floated element.</p>
+        </div>
+        
+        <div class="float-right">
+            <p>Floats are a powerful CSS tool for creating dynamic and engaging layouts. You can use them to align images and text side by side. Floats were widely used before the introduction of modern layout techniques such as flexbox and grid.</p>
         </div>
 
         <div class="clearfix"></div>
@@ -44,5 +40,4 @@
         <p>&copy; 2024 Christopher Biniaris</p>
     </footer>
 </body>
-
 </html>
