--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -7,28 +7,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="skills.html">Skills</a> |
+        <a href="index.html">Home</a> | 
+        <a href="skills.html">Skills</a> | 
         <a href="contact.html">Contact</a>
     </nav>
 
     <h3>Contact</h3>
-    <div class="contact-container">
-        <img src="ist263/headshot.png" alt="Christopher Biniaris" style="width:150px; height:auto; border-radius:50%;"><br>
-        <strong>Christopher Biniaris</strong><br>
+    <p>
+        Christopher Biniaris<br>
         Syracuse University<br>
-        Huntington Hall 308B<br>
+        Huntington Hall 030B<br>
         Syracuse, NY 13244-3080<br>
-        Email: <a href="mailto:cabiniar@syr.edu">cabiniar@syr.edu</a><br><br>
+        Email: <a href="mailto:cabinair@syr.edu">cabinair@syr.edu</a>
+    </p>
 
-        <a href="https://www.linkedin.com/in/christopher-biniaris-901b2b82" target="_blank">My LinkedIn Profile</a><br><br>
+    <a href="https://www.linkedin.com/in/christopher-biniaris-901b2b02" target="_blank">My LinkedIn Profile</a><br><br>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11921.16920457164!2d-76.13794747292323!3d43.041217927909625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f44474e21e03%3A0x97195d548bd5fb12!2sHuntington%20Hall%2C%20Syracuse%20University!5e0!3m2!1sen!2sus!4v1472069040104" 
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+    <a href="https://www.linkedin.com/in/christopher-biniaris-901b2b02" target="_blank">
+        <img src="./pictures/logo-sized.png" alt="LinkedIn Logo" style="width:50px; height:50px;">
+    </a>
 
-    <form action="https://formspree.io/f/xrknwbxp" method="POST">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2914.169204425793!2d-76.13794742292325!3d43.041231972909256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f4f4442e103a%3A0x911755d84b5bfb91!2sHuntington%20Hall%2C%20Syracuse%20University%2C%20NY!5e0!3m2!1sen!2sus!4v1726940910147!5m2!1sen!2sus" 
+    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <form action="https://formspree.io/f/xrknwqbp" method="POST">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br><br>
 
@@ -40,5 +44,6 @@
 
         <input type="submit" value="Send">
     </form>
+
 </body>
 </html>
