--- a/lab08/skills.html
+++ b/lab08/skills.html
@@ -3,70 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interests and Skills</title>
+    <title>Skills</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <nav>
         <a href="index.html">Home</a> | 
         <a href="skills.html">Skills</a> | 
         <a href="contact.html">Contact</a>
     </nav>
 
-    <caption>My Interests and Skills:</caption>
+    <h1>My Interests and Skills</h1>
     <table>
         <tr class="row">
+            <th>Number</th>
+            <th>Category</th>
+            <th>Skill</th>
+        </tr>
+        <tr class="row">
+            <td>1</td>
             <td>Basketball</td>
             <td>Shooting</td>
-            <td>Advanced</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
+            <td>2</td>
             <td>Video Games</td>
             <td>Strategy</td>
-            <td>Intermediate</td>
         </tr>
         <tr class="row">
+            <td>3</td>
             <td>Coding</td>
             <td>Problem Solving</td>
-            <td>Advanced</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
+            <td>4</td>
             <td>Music</td>
             <td>Beginners</td>
-            <td>Intermediate</td>
         </tr>
         <tr class="row">
+            <td>5</td>
             <td>Photography</td>
             <td>Editing</td>
-            <td>Intermediate</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
+            <td>6</td>
             <td>Fitness</td>
             <td>Weight Lifting</td>
-            <td>Advanced</td>
         </tr>
         <tr class="row">
+            <td>7</td>
             <td>Reading</td>
             <td>Critical Thinking</td>
-            <td>Advanced</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
+            <td>8</td>
             <td>Cooking</td>
             <td>Recipe Development</td>
-            <td>Intermediate</td>
         </tr>
         <tr class="row">
+            <td>9</td>
             <td>Traveling</td>
             <td>Planning</td>
-            <td>Advanced</td>
         </tr>
-        <tr>
+        <tr class="evenrow">
+            <td>10</td>
             <td>Social Media</td>
             <td>Content Creation</td>
-            <td>Advanced</td>
         </tr>
     </table>
-
 </body>
 </html>
