--- a/lab08/index.html
+++ b/lab08/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <img src="../headshot.png" alt="Christopher Biniaris" class="profile-image">
+        <img src="headshot.png" alt="Christopher Biniaris" class="profile-image">
         <p>Hi! My name is Christopher Biniaris. I am currently a junior studying Cybersecurity at Syracuse University and I'm originally from Long Island. I have a deep passion for cybersecurity and its role in protecting information in today's digital world.</p>
         <p>I enjoy learning about topics such as network security, ethical hacking, and information assurance. The ever-evolving nature of cybersecurity keeps me motivated to stay up-to-date with the latest trends and technologies, and I look forward to a career in helping organizations safeguard their data.</p>
     </main>
