--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -7,69 +7,79 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navigation Bar -->
     <nav>
-        <a href="index.html">Home</a> | 
-        <a href="skills.html">Skills</a> | 
+        <a href="index.html">Home</a> |
+        <a href="skills.html">Skills</a> |
         <a href="contact.html">Contact</a>
     </nav>
 
+    <!-- Header -->
     <h1>My Interests and Skills</h1>
-    <table>
-        <tr class="row">
-            <th>Number</th>
-            <th>Category</th>
-            <th>Skill</th>
-        </tr>
-        <tr class="row">
-            <td>1</td>
-            <td>Basketball</td>
-            <td>Shooting</td>
-        </tr>
-        <tr class="evenrow">
-            <td>2</td>
-            <td>Video Games</td>
-            <td>Strategy</td>
-        </tr>
-        <tr class="row">
-            <td>3</td>
-            <td>Coding</td>
-            <td>Problem Solving</td>
-        </tr>
-        <tr class="evenrow">
-            <td>4</td>
-            <td>Music</td>
-            <td>Beginners</td>
-        </tr>
-        <tr class="row">
-            <td>5</td>
-            <td>Photography</td>
-            <td>Editing</td>
-        </tr>
-        <tr class="evenrow">
-            <td>6</td>
-            <td>Fitness</td>
-            <td>Weight Lifting</td>
-        </tr>
-        <tr class="row">
-            <td>7</td>
-            <td>Reading</td>
-            <td>Critical Thinking</td>
-        </tr>
-        <tr class="evenrow">
-            <td>8</td>
-            <td>Cooking</td>
-            <td>Recipe Development</td>
-        </tr>
-        <tr class="row">
-            <td>9</td>
-            <td>Traveling</td>
-            <td>Planning</td>
-        </tr>
-        <tr class="evenrow">
-            <td>10</td>
-            <td>Social Media</td>
-            <td>Content Creation</td>
-        </tr>
-    </table>
+
+    
+    <div class="container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Number</th>
+                    <th>Category</th>
+                    <th>Skill</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="row">
+                    <td>1</td>
+                    <td>Basketball</td>
+                    <td>Shooting</td>
+                </tr>
+                <tr class="evenrow">
+                    <td>2</td>
+                    <td>Video Games</td>
+                    <td>Strategy</td>
+                </tr>
+                <tr class="row">
+                    <td>3</td>
+                    <td>Coding</td>
+                    <td>Problem Solving</td>
+                </tr>
+                <tr class="evenrow">
+                    <td>4</td>
+                    <td>Music</td>
+                    <td>Beginners</td>
+                </tr>
+                <tr class="row">
+                    <td>5</td>
+                    <td>Photography</td>
+                    <td>Editing</td>
+                </tr>
+                <tr class="evenrow">
+                    <td>6</td>
+                    <td>Fitness</td>
+                    <td>Weight Lifting</td>
+                </tr>
+                <tr class="row">
+                    <td>7</td>
+                    <td>Reading</td>
+                    <td>Critical Thinking</td>
+                </tr>
+                <tr class="evenrow">
+                    <td>8</td>
+                    <td>Cooking</td>
+                    <td>Recipe Development</td>
+                </tr>
+                <tr class="row">
+                    <td>9</td>
+                    <td>Traveling</td>
+                    <td>Planning</td>
+                </tr>
+                <tr class="evenrow">
+                    <td>10</td>
+                    <td>Social Media</td>
+                    <td>Content Creation</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
