--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -17,8 +17,9 @@
     <!-- Header -->
     <h1>Technical Skills</h1>
 
-    <!-- Flexbox layout with table and image -->
+    <!-- Flexbox Container for Table and Image -->
     <div class="firstrow">
+        <!-- Div for the skills table -->
         <div class="skillstable">
             <table>
                 <thead>
@@ -82,8 +83,10 @@
                 </tbody>
             </table>
         </div>
+
+        <!-- Div for the skills image -->
         <div class="skillsimage">
-            <img src="lab09/skills-pic.png" alt="Skills Icon">
+            <img src="skills-pic.png" alt="Skills Icon" style="width: 150px;">
         </div>
     </div>
 </body>
