--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -7,19 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
+
     <nav>
         <a href="index.html">Home</a> |
         <a href="skills.html">Skills</a> |
         <a href="contact.html">Contact</a>
     </nav>
 
-    <!-- Header -->
     <h1>Technical Skills</h1>
 
-    <!-- Flexbox Container for Table and Image -->
     <div class="firstrow">
-        <!-- Div for the skills table -->
         <div class="skillstable">
             <table>
                 <thead>
@@ -35,7 +32,7 @@
                         <td>Basketball</td>
                         <td>Shooting</td>
                     </tr>
-                    <tr class="evenrow">
+                    <tr class="row">
                         <td>2</td>
                         <td>Video Games</td>
                         <td>Strategy</td>
@@ -84,9 +81,8 @@
             </table>
         </div>
 
-        <!-- Div for the skills image -->
         <div class="skillsimage">
-            <img src="skills-pic.png" alt="Skills Icon" style="width: 150px;">
+            <img src="skills-pic.png" alt="Skills Image">
         </div>
     </div>
 </body>
