--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -42,7 +42,7 @@
                         <td>Coding</td>
                         <td>Problem Solving</td>
                     </tr>
-                    <tr class="evenrow">
+                    <tr class="row">
                         <td>4</td>
                         <td>Music</td>
                         <td>Beginners</td>
@@ -52,7 +52,7 @@
                         <td>Photography</td>
                         <td>Editing</td>
                     </tr>
-                    <tr class="evenrow">
+                    <tr class="row">
                         <td>6</td>
                         <td>Fitness</td>
                         <td>Weight Lifting</td>
@@ -62,7 +62,7 @@
                         <td>Reading</td>
                         <td>Critical Thinking</td>
                     </tr>
-                    <tr class="evenrow">
+                    <tr class="row">
                         <td>8</td>
                         <td>Cooking</td>
                         <td>Recipe Development</td>
@@ -72,7 +72,7 @@
                         <td>Traveling</td>
                         <td>Planning</td>
                     </tr>
-                    <tr class="evenrow">
+                    <tr class="row">
                         <td>10</td>
                         <td>Social Media</td>
                         <td>Content Creation</td>
