--- a/lab09/contact.html
+++ b/lab09/contact.html
@@ -47,7 +47,8 @@
         </div>
 
         <div class="column">
-            <iframe src="https://www.google.com/maps/embed?pb=..." width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0042445794807!2d-76.13794742379501!3d43.04134219178863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a1d241e43d%3A0xd51d775683ab3f9b!2sHuntington%20Hall%2C%20
+loading="lazy"></iframe>
         </div>
     </div>
 </body>
