--- a/lab09/contact.html
+++ b/lab09/contact.html
@@ -26,7 +26,7 @@
 
         <div class="column">
             <a href="https://www.linkedin.com/in/christopher-biniaris-901b2b02" target="_blank">My LinkedIn Profile</a><br><br>
-            <img src="./pictures/logo-sized.png" alt="LinkedIn Logo" style="width:50px; height:50px;">
+            <img src="./lab09/logo-sized.png" alt="LinkedIn Logo" style="width:50px; height:50px;">
         </div>
     </div>
 
