--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="skillsimage">
-            <img src="skills-pic" alt="Skills Image">
+            <img src="Skills-pic.png" alt="Skills Image">
         </div>
     </div>
 </body>
