--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -26,7 +26,7 @@
 
         <div class="column">
             <a href="www.linkedin.com/in/christopher-biniaris-9810bb20a" target="_blank">My LinkedIn Profile</a><br><br>
-            <img src="./lab09/logo-sized.png" alt="LinkedIn Logo" style="width:50px; height:50px;">
+            <img src="./pictures/logo.png" alt="LinkedIn Logo" style="width:50px; height:50px;">
         </div>        
     </div>
 
