--- a/lab10/index.html
+++ b/lab10/index.html
@@ -8,16 +8,19 @@
 </head>
 <body>
 
+    <!-- Navigation Bar -->
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="skills.html">Skills</a> |
+        <a href="index.html">Home</a> <span>|</span>
+        <a href="skills.html">Skills</a> <span>|</span>
         <a href="contact.html">Contact</a>
     </nav>
 
+    <!-- Header Section -->
     <header>
         <h1>Christopher Biniaris</h1>
     </header>
 
+    <!-- Main Content Section -->
     <main class="container">
         <div class="profile-container">
             <img src="lab09/headshot.png" alt="Christopher Biniaris" class="profile-image">
@@ -31,6 +34,7 @@
         <p>I enjoy learning about topics such as network security, ethical hacking, and information assurance. The ever-evolving nature of cybersecurity keeps me motivated to stay up-to-date with the latest trends and technologies, and I look forward to a career in helping organizations safeguard their data.</p>
     </main>
 
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Christopher Biniaris</p>
     </footer>
