--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -8,14 +8,17 @@
 </head>
 <body>
 
+    <!-- Navigation Bar -->
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="skills.html">Skills</a> |
+        <a href="index.html">Home</a> <span>|</span>
+        <a href="skills.html">Skills</a> <span>|</span>
         <a href="contact.html">Contact</a>
     </nav>
 
+    <!-- Header Section -->
     <h1>Technical Skills</h1>
 
+    <!-- Skills Table Section -->
     <div class="firstrow">
         <div class="skillstable">
             <table>
@@ -81,9 +84,11 @@
             </table>
         </div>
 
+        <!-- Skills Image Section -->
         <div class="skillsimage">
-            <img src="Skills-pic.png" alt="Skills Image">
+            <img src="Skills-pic.png" alt="Skills Image" class="responsive-img">
         </div>
     </div>
+
 </body>
 </html>
