--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <!-- Navigation Bar -->
     <nav>
-        <a href="index.html">Home</a> | 
-        <a href="skills.html">Skills</a> | 
+        <a href="index.html">Home</a> <span>|</span>
+        <a href="skills.html">Skills</a> <span>|</span>
         <a href="contact.html">Contact</a>
     </nav>
 
@@ -20,23 +21,23 @@
         <!-- Contact Information -->
         <div class="column">
             <p>Christopher Biniaris<br>
-            Syracuse University<br>
-            Huntington Hall 0308<br>
-            Syracuse, NY 13244-3080<br>
-            <a href="mailto:cabiniar@syr.edu">cabiniar@syr.edu</a></p>
+                Syracuse University<br>
+                Huntington Hall 0308-8<br>
+                Syracuse, NY 13244-3080<br>
+                <a href="mailto:cabiniar@syr.edu">cabiniar@syr.edu</a></p>
         </div>
 
         <!-- LinkedIn Profile -->
         <div class="column">
             <a href="https://www.linkedin.com/in/christopher-biniaris-901b2b02" target="_blank">My LinkedIn Profile</a><br><br>
-            <img src="./lab09/logo-sized.png" alt="LinkedIn Logo" style="width:50px; height:50px;">
+            <img src="./lab09/logo-sized.png" alt="LinkedIn Logo" class="responsive-img" style="width:50px; height:50px;">
         </div>
     </div>
 
     <div class="row">
         <!-- Contact Form -->
         <div class="column">
-            <form action="https://formspree.io/f/xrkvxbgx" method="POST">
+            <form action="https://formspree.io/f/xrvbxgbq" method="POST">
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name"><br><br>
 
@@ -52,9 +53,9 @@
 
         <!-- Google Maps -->
         <div class="column">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0042445794807!2d-76.13794742379501!3d43.04134219178863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a1d241e43d%3A0xd51d775683ab3f9b!2sHuntington%20Hall%2C%20350%20Huntington%20hall%2C%20Syracuse%2C%20NY%2013244!5e0!3m2!1sen!2sus!4v1729793763787!5m2!1sen!2sus"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.0042445794807!2d-76.13794742379501!3d43.04134219178863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a1d241e43d%3A0xd51d775683ab3f9b!2sHuntington%20Hall%2C%20350%20Huntington%20hall%2C%20Syracuse%2C%20NY%2013244!5e0!3m2!1sen!2sus!4v1729793763787!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
+
 </body>
 </html>
