--- a/project/homepage.html
+++ b/project/homepage.html
@@ -18,6 +18,7 @@
     <section>
       <h2>Are you ready to discover the best team in the NBA?</h2>
       <p>Explore team rankings, player stats, and in-depth analyses to find out which NBA team is dominating this season.</p>
+      <img src="project5/pic1.jpg" alt="NBA Home Image">
     </section>
   </main>
   <footer>
