--- a/project/players.html
+++ b/project/players.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Star Players and Key Contributors</title>
+  <title>NBA Team Rankings</title>
 </head>
 <body>
   <header>
-    <h1>Star Players and Key Contributors</h1>
+    <h1>NBA Team Rankings</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="rankings.html">Team Rankings</a>
@@ -14,18 +14,17 @@
     </nav>
   </header>
   <main>
-    <section>
-      <h2>Nikola Jokić</h2>
-      <p>Team: Denver Nuggets</p>
-      <p>Position: Center</p>
-      <p>Stats: 25.1 PPG, 11.7 RPG, 10.3 APG</p>
-    </section>
-    <section>
-      <h2>Jayson Tatum</h2>
-      <p>Team: Boston Celtics</p>
-      <p>Position: Small Forward</p>
-      <p>Stats: 30.5 PPG, 8.1 RPG, 4.5 APG</p>
-    </section>
+    <article>
+      <h2>Denver Nuggets</h2>
+      <p>Record: 50 Wins, 12 Losses</p>
+      <p>Star Player: Nikola Jokić</p>
+    </article>
+    <article>
+      <h2>Boston Celtics</h2>
+      <p>Record: 48 Wins, 14 Losses</p>
+      <p>Star Player: Jayson Tatum</p>
+    </article>
+    <img src="project5/pic2.jpg" alt="NBA Rankings Image">
   </main>
   <footer>
     <p>&copy; 2024 NBA Team Rankings</p>
