--- a/project/players.html
+++ b/project/players.html
@@ -24,7 +24,7 @@
       <p>Record: 48 Wins, 14 Losses</p>
       <p>Star Player: Jayson Tatum</p>
     </article>
-    <img src="project5/pic2.jpg" alt="NBA Rankings Image">
+    <img src="../pictures/pic2.jpg" alt="NBA Rankings Image">
   </main>
   <footer>
     <p>&copy; 2024 NBA Team Rankings</p>
