--- a/project/rank.html
+++ b/project/rank.html
@@ -26,7 +26,7 @@
       <p>Position: Small Forward</p>
       <p>Stats: 30.5 PPG, 8.1 RPG, 4.5 APG</p>
     </section>
-    <img src="../pictures/pic3.jpg" alt="Star Players Image">
+    <img src="../pictures/pic3.jpg" alt="Star Players Image" width="200">
   </main>
   <footer>
     <p>&copy; 2024 NBA Team Rankings</p>
