--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <title>Lab 11 - JavaScript Practice</title>
     <script>
-        function ThirdFunction() {
-            alert('Third Alert');
-        }
+        alert('You won!');
     </script>
 </head>
 <body>
     <h1>JavaScript Practice</h1>
-    <a onclick="ThirdFunction();" href="#">Click Here</a>
 </body>
 </html>
