--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -14,8 +14,9 @@
     </script>
 </head>
 <body>
-    <h1>JavaScript Practice</h1>
-    <button onclick="WinnerMessage()">Click for Winner Message</button>
-    <button onclick="TryAgain()">Click to Try Again</button>
+    <h1>Choose a Walnut</h1>
+    <img src="lab11/wallnut.jpg" alt="first walnut" onclick="WinnerMessage();" style="width:100px; height:auto;">
+    <img src="lab11/wallnut.jpg" alt="second walnut" onclick="TryAgain();" style="width:100px; height:auto;">
+    <img src="lab11/wallnut.jpg" alt="third walnut" onclick="TryAgain();" style="width:100px; height:auto;">
 </body>
 </html>
