--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <h1>Choose a Walnut</h1>
-    <img src="lab11/wallnut.jpg" alt="first walnut" onclick="WinnerMessage();" style="width:100px; height:auto;">
-    <img src="lab11/wallnut.jpg" alt="second walnut" onclick="TryAgain();" style="width:100px; height:auto;">
-    <img src="lab11/wallnut.jpg" alt="third walnut" onclick="TryAgain();" style="width:100px; height:auto;">
+    <img src="lab11/walnut.jpg" alt="first walnut" onclick="WinnerMessage();" style="width:100px; height:auto;">
+    <img src="lab11/walnut.jpg" alt="second walnut" onclick="TryAgain();" style="width:100px; height:auto;">
+    <img src="lab11/walnut.jpg" alt="third walnut" onclick="TryAgain();" style="width:100px; height:auto;">
 </body>
 </html>
