--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -3,20 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Lab 11 - JavaScript Practice</title>
+    <style>
+        .container {
+            display: flex;
+        }
+        #first { order: 1; }
+        #second { order: 2; }
+        #third { order: 3; }
+    </style>
     <script>
         function WinnerMessage() {
-            alert('You won!');
+            document.getElementById("messages").innerHTML = 'You Won!';
         }
 
         function TryAgain() {
-            alert('Wrong Shell - Try Again');
+            document.getElementById("messages").innerHTML = 'Wrong Shell - Try Again';
+        }
+
+        function ShuffleShells() {
+            document.getElementById("first").style.order = Math.floor((Math.random() * 3) + 2);
         }
     </script>
 </head>
-<body>
-    <h1>Choose a Walnut</h1>
-    <img src="lab11/walnut.jpg" alt="first walnut" onclick="WinnerMessage();" style="width:100px; height:auto;">
-    <img src="lab11/walnut.jpg" alt="second walnut" onclick="TryAgain();" style="width:100px; height:auto;">
-    <img src="lab11/walnut.jpg" alt="third walnut" onclick="TryAgain();" style="width:100px; height:auto;">
+<body onload="ShuffleShells();">
+
+    <h1>JavaScript Practice</h1>
+    <div id="messages"></div>
+
+    <div class="container">
+        <h1>Choose a Walnut</h1>
+        <img src="lab11/walnut.jpg" alt="first walnut" id="first" onclick="WinnerMessage();">
+        <img src="lab11/walnut.jpg" alt="second walnut" id="second" onclick="TryAgain();">
+        <img src="lab11/walnut.jpg" alt="third walnut" id="third" onclick="TryAgain();">
+    </div>
+
 </body>
 </html>
