--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -28,12 +28,11 @@
 <body onload="ShuffleShells();">
     <h1>JavaScript Practice</h1>
     <div id="messages"></div>
-
+    <h1>Choose a Walnut</h1>
     <div class="container">
-        <h1>Choose a Walnut</h1>
-        <img src="Walnut.jpg" alt="first walnut" id="first" onclick="WinnerMessage();">
-        <img src="Walnut.jpg" alt="second walnut" id="second" onclick="TryAgain();">
-        <img src="Walnut.jpg" alt="third walnut" id="third" onclick="TryAgain();">
+        <img src="lab11/walnut.jpg" alt="first walnut" id="first" onclick="WinnerMessage();">
+        <img src="lab11/walnut.jpg" alt="second walnut" id="second" onclick="TryAgain();">
+        <img src="lab11/walnut.jpg" alt="third walnut" id="third" onclick="TryAgain();">
     </div>
 </body>
 </html>
