--- a/lab11/lab11.html
+++ b/lab11/lab11.html
@@ -2,37 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lab 11 - JavaScript Practice</title>
-    <style>
-        .container {
-            display: flex;
-        }
-        #first { order: 1; }
-        #second { order: 2; }
-        #third { order: 3; }
-    </style>
+    <title>Lab 11 - JavaScript Practice (Alerts)</title>
     <script>
         function WinnerMessage() {
-            document.getElementById("messages").innerHTML = 'You Won!';
+            alert('You won!');
         }
 
         function TryAgain() {
-            document.getElementById("messages").innerHTML = 'Wrong Shell - Try Again';
-        }
-
-        function ShuffleShells() {
-            document.getElementById("first").style.order = Math.floor((Math.random() * 3) + 1);
+            alert('Wrong Shell - Try Again');
         }
     </script>
 </head>
-<body onload="ShuffleShells();">
+<body>
     <h1>JavaScript Practice</h1>
-    <div id="messages"></div>
     <h1>Choose a Walnut</h1>
     <div class="container">
-        <img src="lab11/walnut.jpg" alt="first walnut" id="first" onclick="WinnerMessage();">
-        <img src="lab11/walnut.jpg" alt="second walnut" id="second" onclick="TryAgain();">
-        <img src="lab11/walnut.jpg" alt="third walnut" id="third" onclick="TryAgain();">
+        <img src="Nut.jpg" alt="first walnut" onclick="WinnerMessage();">
+        <img src="Nut.jpg" alt="second walnut" onclick="TryAgain();">
+        <img src="Nut.jpg" alt="third walnut" onclick="TryAgain();">
     </div>
 </body>
 </html>
