--- a/lab12/Slideshow.html
+++ b/lab12/Slideshow.html
@@ -1,116 +1,119 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)https://peopel-su.github.io/ist263/lab12/lab12.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-     
-     <title>Lab 12 Slideshow</title>
-     <style>
-         body {
-             font-family: Verdana, Geneva, Tahoma, sans-serif; 
-             background-color: #111111;
-             color: #ffffff;
-         }
-         #slideshow-container {
-             background-color: #000000;
-             width: 1200px;
-             margin: auto; /* margin auto is centering this container */        
-         }
-         #bigimages {margin-right: 100px;}
-         #planetinfo {padding: 100px;}
-         #thumbnails {width: 840px; margin: auto; padding-top: 20px;} 
-         /* ^^ margin auto is centering this container */
-         #mercurythumb, #venusthumb, #earththumb, #marsthumb, #jupiterthumb, #saturnthumb, #uranusthumb, #neptunethumb 
-         {width: 100px;}
-     </style>
-     <script>
-
-     </script>
- <style type="text/css" media="print">
-        @media print {
-            .no-print {
-                display: none !important;
-            }
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Lab 12 Slideshow</title>
+    <style>
+        body {
+            font-family: Verdana, Geneva, Tahoma, sans-serif; 
+            background-color: #111111;
+            color: #ffffff;
         }
-    </style></head>
- <body data-new-gr-c-s-check-loaded="14.1207.0" data-gr-ext-installed="">
- <div id="slideshow-container">
-     <div id="bigimages">
-         <img src="./Slideshow_files/mecury.jpg" alt="mercury" id="mercury">
-         <img src="./Slideshow_files/venus.jpg" alt="venus" id="venus">
-         <img src="./Slideshow_files/earth.jpg" alt="earth" id="earth">
-         <img src="./Slideshow_files/mars.jpg" alt="mars" id="mars">
-         <img src="./Slideshow_files/jupiter.jpg" alt="jupiter" id="jupiter">
-         <img src="./Slideshow_files/saturn.jpg" alt="saturn" id="saturn">
-         <img src="./Slideshow_files/uranus.jpg" alt="uranus" id="uranus">
-         <img src="./Slideshow_files/neptune.jpg" alt="neptune" id="neptune">
-     </div>
-     <div id="planetinfo">        
-         <h1>Planets Slideshow</h1>
-         <div id="mercuryinfo">
-             <h2>Mercury</h2>
-             <p>Mercury is the smallest and innermost planet in the Solar System. Its orbit around the Sun takes 87.97 Earth days, the shortest of all the planets in the Solar System. It is named after the Greek god Hermes (Ερμής), translated into Latin Mercurius Mercury, god of commerce, messenger of the gods, mediator between gods and mortals.</p>
-         </div>
-         <div id="venusinfo">
-             <h2>Venus</h2>
-             <p>Venus is the second planet from the Sun. It is named after the Roman goddess of love and beauty. As the second-brightest natural object in the night sky after the Moon, Venus can cast shadows and can be, on rare occasion, visible to the naked eye in broad daylight. Venus lies within Earth's orbit, and so never appears to venture far from the Sun, either setting in the west just after dusk or rising in the east a bit before dawn. Venus orbits the Sun every 224.7 Earth days. </p>
-         </div>
-         <div id="earthinfo">
-             <h2>Earth</h2>
-             <p>Earth is the third planet from the Sun and the only astronomical object known to harbor life. About 29% of Earth's surface is land consisting of continents and islands. The remaining 71% is covered with water, mostly by oceans but also lakes, rivers and other fresh water, which together constitute the hydrosphere. Much of Earth's polar regions are covered in ice.</p>
-         </div>
-         <div id="marsinfo">
-             <h2>Mars</h2>
-             <p>Mars is a terrestrial planet with a thin atmosphere, with surface features reminiscent of the impact craters of the Moon and the valleys, deserts and polar ice caps of Earth.</p>
-         </div>
-         <div id="jupiterinfo">
-             <h2>Jupiter</h2>
-             <p>Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass one-thousandth that of the Sun, but two-and-a-half times that of all the other planets in the Solar System combined. Jupiter is one of the brightest objects visible to the naked eye in the night sky, and has been known to ancient civilizations since before recorded history. It is named after the Roman god Jupiter.</p>
-         </div>
-         <div id="saturninfo">
-             <h2>Saturn</h2>
-             <p>Saturn is the sixth planet from the Sun and the second-largest in the Solar System, after Jupiter. It is a gas giant with an average radius of about nine times that of Earth. It only has one-eighth the average density of Earth; however, with its larger volume, Saturn is over 95 times more massive.</p>
-         </div>
-         <div id="uranusinfo">
-             <h2>Uranus</h2>
-             <p>Uranus is the seventh planet from the Sun. Its name is a reference to the Greek god of the sky, Uranus, who, according to Greek mythology, was the grandfather of Zeus (Jupiter) and father of Cronus (Saturn). It has the third-largest planetary radius and fourth-largest planetary mass in the Solar System. </p>
-         </div>
-         <div id="neptuneinfo">
-             <h2>Neptune</h2>
-             <p>Neptune is the eighth and farthest-known Solar planet from the Sun. In the Solar System, it is the fourth-largest planet by diameter, the third-most-massive planet, and the densest giant planet. It is 17 times the mass of Earth, slightly more massive than its near-twin Uranus.</p>
-         </div>
-     </div>
-     <div id="thumbnails">
-         <img src="./Slideshow_files/mecury.jpg" alt="mercury" id="mercurythumb">
-         <img src="./Slideshow_files/venus.jpg" alt="venus" id="venusthumb">
-         <img src="./Slideshow_files/earth.jpg" alt="earth" id="earththumb">
-         <img src="./Slideshow_files/mars.jpg" alt="mars" id="marsthumb">
-         <img src="./Slideshow_files/jupiter.jpg" alt="jupiter" id="jupiterthumb">
-         <img src="./Slideshow_files/saturn.jpg" alt="saturn" id="saturnthumb">
-         <img src="./Slideshow_files/uranus.jpg" alt="uranus" id="uranusthumb">
-         <img src="./Slideshow_files/neptune.jpg" alt="neptune" id="neptunethumb">
-     </div>
+        #slideshow-container {
+            background-color: #000000;
+            width: 1200px;
+            margin: auto; /* centers the container */        
+        }
+        #bigimages {margin-right: 100px; float: left;}
+        #planetinfo {padding: 100px; float: left;}
+        #thumbnails {width: 840px; margin: auto; padding-top: 20px; clear: both;}
+        #mercurythumb, #venusthumb, #earththumb, #marsthumb, #jupiterthumb, #saturnthumb, #uranusthumb, #neptunethumb {
+            width: 100px;
+        }
 
- </div>
+        /* Hide all planets and info by default except Mercury */
+        #venus, #earth, #mars, #jupiter, #saturn, #uranus, #neptune,
+        #venusinfo, #earthinfo, #marsinfo, #jupiterinfo, #saturninfo, #uranusinfo, #neptuneinfo {
+            display: none;
+        }
+    </style>
+    <script>
+        // Function to hide all planets and their information
+        function hideAllPlanets() {
+            document.getElementById("mercury").style.display = "none";
+            document.getElementById("venus").style.display = "none";
+            document.getElementById("earth").style.display = "none";
+            document.getElementById("mars").style.display = "none";
+            document.getElementById("jupiter").style.display = "none";
+            document.getElementById("saturn").style.display = "none";
+            document.getElementById("uranus").style.display = "none";
+            document.getElementById("neptune").style.display = "none";
+            
+            document.getElementById("mercuryinfo").style.display = "none";
+            document.getElementById("venusinfo").style.display = "none";
+            document.getElementById("earthinfo").style.display = "none";
+            document.getElementById("marsinfo").style.display = "none";
+            document.getElementById("jupiterinfo").style.display = "none";
+            document.getElementById("saturninfo").style.display = "none";
+            document.getElementById("uranusinfo").style.display = "none";
+            document.getElementById("neptuneinfo").style.display = "none";
+        }
 
- 
- 
-</body><copyleaks-sidebar-popup id="copyleaks-sidebar-popup-container" class="no-print"><template shadowrootmode="open"><img id="text-selection-icon" src="chrome-extension://gplcmncpklkdjiccbknjjkoidpgkcakd/assets/icons/cl-logo.svg" style="width: 38px; z-index: 99999999; border-radius: 50%; box-shadow: rgba(0, 0, 0, 0.41) 0px 0px 2px; cursor: pointer; display: none;"></template></copyleaks-sidebar-popup><grammarly-desktop-integration data-grammarly-shadow-root="true"><template shadowrootmode="open"><style>
-      div.grammarly-desktop-integration {
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        margin: -1px;
-        overflow: hidden;
-        clip: rect(0, 0, 0, 0);
-        white-space: nowrap;
-        border: 0;
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        -ms-user-select:none;
-        user-select:none;
-      }
-
-      div.grammarly-desktop-integration:before {
-        content: attr(data-content);
-      }
-    </style><div aria-label="grammarly-integration" role="group" tabindex="-1" class="grammarly-desktop-integration" data-content="{&quot;mode&quot;:&quot;full&quot;,&quot;isActive&quot;:true,&quot;isUserDisabled&quot;:false}"></div></template></grammarly-desktop-integration></html>
+        // Function to show a specific planet and its information
+        function showPlanet(planet) {
+            hideAllPlanets();
+            document.getElementById(planet).style.display = "block";
+            document.getElementById(planet + "info").style.display = "block";
+        }
+    </script>
+</head>
+<body>
+    <div id="slideshow-container">
+        <div id="bigimages">
+            <img src="./Slideshow_files/mecury.jpg" alt="mercury" id="mercury">
+            <img src="./Slideshow_files/venus.jpg" alt="venus" id="venus">
+            <img src="./Slideshow_files/earth.jpg" alt="earth" id="earth">
+            <img src="./Slideshow_files/mars.jpg" alt="mars" id="mars">
+            <img src="./Slideshow_files/jupiter.jpg" alt="jupiter" id="jupiter">
+            <img src="./Slideshow_files/saturn.jpg" alt="saturn" id="saturn">
+            <img src="./Slideshow_files/uranus.jpg" alt="uranus" id="uranus">
+            <img src="./Slideshow_files/neptune.jpg" alt="neptune" id="neptune">
+        </div>
+        <div id="planetinfo">        
+            <h1>Planets Slideshow</h1>
+            <div id="mercuryinfo">
+                <h2>Mercury</h2>
+                <p>Mercury is the smallest and innermost planet in the Solar System...</p>
+            </div>
+            <div id="venusinfo">
+                <h2>Venus</h2>
+                <p>Venus is the second planet from the Sun. It is named after the Roman goddess of love and beauty...</p>
+            </div>
+            <div id="earthinfo">
+                <h2>Earth</h2>
+                <p>Earth is the third planet from the Sun and the only astronomical object known to harbor life...</p>
+            </div>
+            <div id="marsinfo">
+                <h2>Mars</h2>
+                <p>Mars is a terrestrial planet with a thin atmosphere, with surface features reminiscent of the Moon...</p>
+            </div>
+            <div id="jupiterinfo">
+                <h2>Jupiter</h2>
+                <p>Jupiter is the fifth planet from the Sun and the largest in the Solar System...</p>
+            </div>
+            <div id="saturninfo">
+                <h2>Saturn</h2>
+                <p>Saturn is the sixth planet from the Sun and the second-largest in the Solar System...</p>
+            </div>
+            <div id="uranusinfo">
+                <h2>Uranus</h2>
+                <p>Uranus is the seventh planet from the Sun, with a name referencing the Greek god of the sky...</p>
+            </div>
+            <div id="neptuneinfo">
+                <h2>Neptune</h2>
+                <p>Neptune is the eighth and farthest-known Solar planet from the Sun...</p>
+            </div>
+        </div>
+        <div id="thumbnails">
+            <img src="./Slideshow_files/mecury.jpg" alt="mercury" id="mercurythumb" onclick="showPlanet('mercury')">
+            <img src="./Slideshow_files/venus.jpg" alt="venus" id="venusthumb" onclick="showPlanet('venus')">
+            <img src="./Slideshow_files/earth.jpg" alt="earth" id="earththumb" onclick="showPlanet('earth')">
+            <img src="./Slideshow_files/mars.jpg" alt="mars" id="marsthumb" onclick="showPlanet('mars')">
+            <img src="./Slideshow_files/jupiter.jpg" alt="jupiter" id="jupiterthumb" onclick="showPlanet('jupiter')">
+            <img src="./Slideshow_files/saturn.jpg" alt="saturn" id="saturnthumb" onclick="showPlanet('saturn')">
+            <img src="./Slideshow_files/uranus.jpg" alt="uranus" id="uranusthumb" onclick="showPlanet('uranus')">
+            <img src="./Slideshow_files/neptune.jpg" alt="neptune" id="neptunethumb" onclick="showPlanet('neptune')">
+        </div>
+    </div>
+</body>
+</html>
